--- a/Source/Space Invaders/Space Invaders/MainWindow.xaml
+++ b/Source/Space Invaders/Space Invaders/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Space_Invaders"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="800">
+        Title="MainWindow" Height="750" Width="1200">
     <Grid>
+        <!--Frame pour la navigation entre le differents pages-->
+        <Frame x:Name="myframe" Content="Frame" HorizontalAlignment="Stretch" Height="Auto" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="Auto"/>
 
     </Grid>
 </Window>
