--- a/Source/Space Invaders/Space Invaders/View/MenuPage.xaml
+++ b/Source/Space Invaders/Space Invaders/View/MenuPage.xaml
@@ -28,7 +28,7 @@
         </Grid.Background>
 
         <Image HorizontalAlignment="Stretch"   VerticalAlignment="Center" Source="/Sprites/Background/Banner.png" Grid.Column="1" Grid.Row="0" Margin="0,25,0,0"/>
-        <Button Grid.Row="3" Height="60" Width="250"  VerticalAlignment="Center" HorizontalAlignment="Center" Content="Play"  Style="{StaticResource ButtonStyle}" />
+        <Button Grid.Row="3" Height="60" Width="250"  VerticalAlignment="Center" HorizontalAlignment="Center" Content="Play"  Style="{StaticResource ButtonStyle}" Click="PlayGame" />
         <Button  Grid.Row="4" Height="60" Width="250"  VerticalAlignment="Center" HorizontalAlignment="Center" Content="Exit"  Style="{StaticResource ButtonStyle}" />
         <Label Content="Highscore : " Style="{StaticResource Bungee}"  Height="60" Width="250" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Top" Foreground="white" HorizontalContentAlignment="Left" FontSize="18px" BorderThickness="3" BorderBrush="#FEFE5A" />
         <Slider Style="{StaticResource CustomSlider_V2}" Grid.Row="5" HorizontalAlignment="Center"  VerticalAlignment="Center" Width="220" Height="25" Minimum="0" Maximum="100" Value="0" SmallChange="1"/>
