--- a/Source/Space Invaders/Space Invaders/View/GamePage.xaml
+++ b/Source/Space Invaders/Space Invaders/View/GamePage.xaml
@@ -19,7 +19,7 @@
                 <TextBlock  Text="PAUSE" FontWeight="bold"  Foreground="White" FontSize="15" Height="20"  />
             </DockPanel>
         </Button>
-        <Canvas HorizontalAlignment="Stretch" Height="Auto" Margin="0,50,0,0" VerticalAlignment="Stretch" Width="Auto">
+        <Canvas x:Name="Canvas" HorizontalAlignment="Stretch" Height="Auto" Margin="0,50,0,0" VerticalAlignment="Stretch" Width="Auto">
             
         </Canvas>
 
