Inititialisation du jeu et gerer le déplacement du joueur

--- a/Source/Space Invaders/Space Invaders/View/GamePage.xaml
+++ b/Source/Space Invaders/Space Invaders/View/GamePage.xaml
@@ -16,7 +16,7 @@
         <Button  Background="Transparent" Height="30" Width="80" BorderThickness="2" BorderBrush="white" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10, 0, 10,0">
             <DockPanel>
                 <Image Source="/Sprites/Icon/pauseIcon.png"  Width="15"/>
-                <TextBlock  Text="PAUSE" FontWeight="bold"  Foreground="White" FontSize="15" Height="20"  />
+                <TextBlock  Text="PAUSE" FontWeight="bold"  Foreground="Yellow" FontSize="15" Height="20"  />
             </DockPanel>
         </Button>
         <Canvas x:Name="Canvas" HorizontalAlignment="Stretch" Height="Auto" Margin="0,50,0,0" VerticalAlignment="Stretch" Width="Auto">
