--- a/Source/Space Invaders/Space Invaders/View/MenuPage.xaml
+++ b/Source/Space Invaders/Space Invaders/View/MenuPage.xaml
@@ -19,6 +19,7 @@
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
+        <!--Background en utilisant un gif-->
         <Grid.Background>
             <VisualBrush>
                 <VisualBrush.Visual>
