--- a/Source/Space Invaders/Space Invaders/View/PauseGamePage.xaml
+++ b/Source/Space Invaders/Space Invaders/View/PauseGamePage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Space_Invaders.View"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="750" d:DesignWidth="1200"
       Title="PauseGamePage">
 
     <Grid>
@@ -13,16 +13,19 @@
             <RowDefinition Height="1*"/>
             <RowDefinition Height="2*"/>
             <RowDefinition Height="1*"/>
-            
+
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="3*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-
-        <Button Grid.Column="1" Grid.Row="1" Height="60" Width="250"  Margin="0 20 0 0" VerticalAlignment="Top" HorizontalAlignment="Center" Content="Play"  Style="{StaticResource ButtonStyle}" />
-        <Button  Grid.Column="1" Grid.Row="1" Height="60" Width="250"  Margin="0 20 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Exit"  Style="{StaticResource ButtonStyle}" />
-        <Slider Style="{StaticResource CustomSlider_V2}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Margin="0 0 0 20" VerticalAlignment="Bottom" Width="220" Height="25" Minimum="0" Maximum="100" Value="0" SmallChange="1"/>
+        <Grid.Background>
+            <ImageBrush ImageSource="/Sprites/Background/background.png"/>
+        </Grid.Background>
+        <Border BorderThickness="5" BorderBrush="Yellow" CornerRadius="25" Grid.Row="1" Grid.Column="1"/>
+        <Button Grid.Column="1" Grid.Row="1" Height="80" Width="280"  Margin="0 40 0 0" VerticalAlignment="Top" HorizontalAlignment="Center" Content="CONTINUE"  Style="{StaticResource ButtonStyle}" />
+        <Button  Grid.Column="1" Grid.Row="1" Height="80" Width="280"  Margin="0 30 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Menu"  Style="{StaticResource ButtonStyle}" />
+        <Slider Style="{StaticResource CustomSlider_V2}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Margin="0 0 0 50" VerticalAlignment="Bottom" Width="280" Height="30" Minimum="0" Maximum="100" Value="0" SmallChange="1"/>
     </Grid>
 </Page>
