--- a/Source/Space Invaders/Space Invaders/View/GamePage.xaml
+++ b/Source/Space Invaders/Space Invaders/View/GamePage.xaml
@@ -13,7 +13,7 @@
         <Grid.Background>
             <ImageBrush ImageSource="/Sprites/Background/background.png"/>
         </Grid.Background>
-        <Button  Background="Transparent" Height="30" Width="80" BorderThickness="2" BorderBrush="white" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10, 0, 10,0">
+        <Button  Background="Transparent" Height="30" Width="80" BorderThickness="2" BorderBrush="white" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10, 0, 10,0" Click="PauseSetting" >
             <DockPanel>
                 <Image Source="/Sprites/Icon/pauseIcon.png"  Width="15"/>
                 <TextBlock  Text="PAUSE" FontWeight="bold"  Foreground="White" FontSize="15" Height="20"  />
