Ajout de fonctionslité button Retour

--- a/Source/Space Invaders/Space Invaders/View/PauseGamePage.xaml
+++ b/Source/Space Invaders/Space Invaders/View/PauseGamePage.xaml
@@ -24,7 +24,7 @@
             <ImageBrush ImageSource="/Sprites/Background/background.png"/>
         </Grid.Background>
         <Border BorderThickness="5" BorderBrush="Yellow" CornerRadius="25" Grid.Row="1" Grid.Column="1"/>
-        <Button Grid.Column="1" Grid.Row="1" Height="80" Width="280"  Margin="0 40 0 0" VerticalAlignment="Top" HorizontalAlignment="Center" Content="CONTINUE"  Style="{StaticResource ButtonStyle}"/>
+        <Button Grid.Column="1" Grid.Row="1" Height="80" Width="280"  Margin="0 40 0 0" VerticalAlignment="Top" HorizontalAlignment="Center" Content="CONTINUE"  Style="{StaticResource ButtonStyle}" Click="Retour"/>
         <Button  Grid.Column="1" Grid.Row="1" Height="80" Width="280"  Margin="0 30 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Menu"  Style="{StaticResource ButtonStyle}" Click="Menu" />
         <Slider Style="{StaticResource CustomSlider_V2}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Margin="0 0 0 50" VerticalAlignment="Bottom" Width="280" Height="30" Minimum="0" Maximum="100" Value="0" SmallChange="1"/>
     </Grid>
