--- a/Source/Space Invaders/Space Invaders/View/GameWinWindow.xaml
+++ b/Source/Space Invaders/Space Invaders/View/GameWinWindow.xaml
@@ -5,15 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Space_Invaders.View"
         mc:Ignorable="d" 
-        d:DesignHeight="550" d:DesignWidth="750"
-        Title="GameWin">
+        
+        Title="GameWin" Height="550" Width="750">
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="51*"/>
-            <RowDefinition Height="93*"/>
-            <RowDefinition Height="199*"/>
-            <RowDefinition Height="141*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="1.7*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
@@ -23,12 +22,14 @@
         <Grid.Background>
             <ImageBrush ImageSource="/Sprites/Background/background.png"/>
         </Grid.Background>
-        <Image HorizontalAlignment="Left" Height="90" VerticalAlignment="Top" Width="132" Source="/Sprites/Decor/alienv.png" Grid.Column="1" Grid.Row="1"/>
-        <Image HorizontalAlignment="Center"  Height="90" VerticalAlignment="Top" Width="132" Source="/Sprites/Decor/alienr.png" Grid.Column="1" Grid.Row="1"/>
-        <Image HorizontalAlignment="Right" Height="90" VerticalAlignment="Top" Width="132" Source="/Sprites/Decor/alienb.png" Grid.Column="1" Grid.Row="1"/>
-        <Label Content="YOU HAVE WIN" Style="{StaticResource Bungee}" Grid.Column="1" Height="98" Width="412" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Foreground="#FEFE5A" HorizontalContentAlignment="Center" FontSize="50px" Grid.RowSpan="2" Margin="0,65,0,0"/>
-        <Label Content="Score : " Style="{StaticResource Bungee}" Grid.Column="1" Height="100" Width="348" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Top" Foreground="#FEFE5A" HorizontalContentAlignment="Center" VerticalContentAlignment="Top" FontSize="32px" BorderThickness="3" BorderBrush="#FEFE5A" Margin="0,75,0,0"  />
-        <Button Grid.Column="2" Grid.Row="3" Height="50" Width="130"  VerticalAlignment="Top" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="MENU" FontSize="24" Style="{StaticResource ButtonStyle}" Click="Menu"/>
+
+
+        <Image HorizontalAlignment="Center"  Width="136" Height="124" VerticalAlignment="Top" Source="/Sprites/Decor/spaceship.png" Grid.Column="1" Grid.Row="0"/>
+        <Image HorizontalAlignment="Right" Height="124" VerticalAlignment="Top" Width="136" Source="/Sprites/Decor/spaceship.png" Grid.Column="2" Grid.Row="1"/>
+        <Image HorizontalAlignment="Right" Height="124" VerticalAlignment="Top" Width="136" Source="/Sprites/Decor/spaceship.png" Grid.Column="0" Grid.Row="1"/>
+        <Label Content="You win !" Style="{StaticResource Bungee}" Grid.Column="1" Height="98" Width="412" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Foreground="#FEFE5A" HorizontalContentAlignment="Center" FontSize="50px" Grid.RowSpan="2" />
+        <Label Content="Score : " Style="{StaticResource Bungee}" Grid.Column="1" Height="100" Width="348" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Bottom" Foreground="#FEFE5A" HorizontalContentAlignment="Center" VerticalContentAlignment="Top" FontSize="32px" BorderThickness="3" BorderBrush="#FEFE5A"  />
+        <Button Grid.Column="2" Grid.Row="3" Height="50" Width="130"  VerticalAlignment="Top" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="MENU" FontSize="24" Style="{StaticResource ButtonStyle}" Click="Menu" />
 
     </Grid>
 </Window>
