--- a/Source/Space Invaders/Space Invaders/View/GameWinWindow.xaml
+++ b/Source/Space Invaders/Space Invaders/View/GameWinWindow.xaml
@@ -28,7 +28,7 @@
         <Image HorizontalAlignment="Right" Height="124" VerticalAlignment="Top" Width="136" Source="/Sprites/Decor/spaceship.png" Grid.Column="2" Grid.Row="1"/>
         <Image HorizontalAlignment="Right" Height="124" VerticalAlignment="Top" Width="136" Source="/Sprites/Decor/spaceship.png" Grid.Column="0" Grid.Row="1"/>
         <Label Content="You win !" Style="{StaticResource Bungee}" Grid.Column="1" Height="98" Width="412" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Foreground="#FEFE5A" HorizontalContentAlignment="Center" FontSize="50px" Grid.RowSpan="2" />
-        <Label Content="Score : " Style="{StaticResource Bungee}" Grid.Column="1" Height="100" Width="348" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Bottom" Foreground="#FEFE5A" HorizontalContentAlignment="Center" VerticalContentAlignment="Top" FontSize="32px" BorderThickness="3" BorderBrush="#FEFE5A"  />
+        <Label x:Name="scoreLabel" Content="Score : " Style="{StaticResource Bungee}" Grid.Column="1" Height="100" Width="348" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Bottom" Foreground="#FEFE5A" HorizontalContentAlignment="Center" VerticalContentAlignment="Top" FontSize="32px" BorderThickness="3" BorderBrush="#FEFE5A"  />
         <Button Grid.Column="2" Grid.Row="3" Height="50" Width="130"  VerticalAlignment="Top" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="MENU" FontSize="24" Style="{StaticResource ButtonStyle}" Click="Menu" />
 
     </Grid>
