--- a/Source/Space Invaders/Space Invaders/MainWindow.xaml
+++ b/Source/Space Invaders/Space Invaders/MainWindow.xaml
@@ -4,11 +4,35 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Space_Invaders"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="750" Width="1200">
+        mc:Ignorable="d"     
+        xmlns:gif="https://github.com/XamlAnimatedGif/XamlAnimatedGif" 
+      d:DesignHeight="750" d:DesignWidth="1200"
+      Title="MenuPage">
+
     <Grid>
-        <!--Frame pour la navigation entre le differents pages-->
-        <Frame x:Name="myframe" Content="Frame" HorizontalAlignment="Stretch" Height="Auto" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="Auto"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2.5*"/>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+        <!--Background en utilisant un gif-->
+        <Grid.Background>
+            <VisualBrush>
+                <VisualBrush.Visual>
+                    <Image gif:AnimationBehavior.SourceUri="/Sprites/Background/background.gif" />
+                </VisualBrush.Visual>
+            </VisualBrush>
+        </Grid.Background>
+
+        <Image HorizontalAlignment="Stretch"   VerticalAlignment="Center" Source="/Sprites/Background/Banner.png" Grid.Column="1" Grid.Row="0" Margin="0,25,0,0"/>
+        <Button Grid.Row="3" Height="60" Width="250"  VerticalAlignment="Center" HorizontalAlignment="Center" Content="Play"  Style="{StaticResource ButtonStyle}" Click="PlayGame" />
+        <Button  Grid.Row="4" Height="60" Width="250"  VerticalAlignment="Center" HorizontalAlignment="Center" Content="Exit"  Style="{StaticResource ButtonStyle}" Click="Exit"  />
+        <Label x:Name="highscoreLabel" Content="Highscore : " Style="{StaticResource Bungee}"  Height="60" Width="250" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Top" Foreground="white" HorizontalContentAlignment="Left" FontSize="18px" BorderThickness="3" BorderBrush="#FEFE5A" />
+        <Slider Style="{StaticResource CustomSlider_V2}" Grid.Row="5" HorizontalAlignment="Center"  VerticalAlignment="Center" Width="220" Height="25" Minimum="0" Maximum="100" Value="0" SmallChange="1"/>
 
     </Grid>
 </Window>
