--- a/Source/Space Invaders/Space Invaders/View/PauseGameWindow.xaml
+++ b/Source/Space Invaders/Space Invaders/View/PauseGameWindow.xaml
@@ -1,17 +1,15 @@
-﻿<Page x:Class="Space_Invaders.View.PauseGamePage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Space_Invaders.View"
-      mc:Ignorable="d" 
-      d:DesignHeight="750" d:DesignWidth="1200"
-      Title="PauseGamePage">
-
+﻿<Window x:Class="Space_Invaders.View.PauseGameWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:Space_Invaders.View"
+        mc:Ignorable="d"
+        Title="PauseGameWindow" Height="550" Width="650">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="4*"/>
             <RowDefinition Height="1*"/>
 
         </Grid.RowDefinitions>
@@ -28,4 +26,4 @@
         <Button  Grid.Column="1" Grid.Row="1" Height="80" Width="280"  Margin="0 30 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Menu"  Style="{StaticResource ButtonStyle}" Click="Menu" />
         <Slider Style="{StaticResource CustomSlider_V2}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Margin="0 0 0 50" VerticalAlignment="Bottom" Width="280" Height="30" Minimum="0" Maximum="100" Value="0" SmallChange="1"/>
     </Grid>
-</Page>
+</Window>
