--- a/Source/Space Invaders/Space Invaders/View/PauseGameWindow.xaml
+++ b/Source/Space Invaders/Space Invaders/View/PauseGameWindow.xaml
@@ -24,6 +24,6 @@
         <Border BorderThickness="5" BorderBrush="Yellow" CornerRadius="25" Grid.Row="1" Grid.Column="1"/>
         <Button Grid.Column="1" Grid.Row="1" Height="80" Width="280"  Margin="0 40 0 0" VerticalAlignment="Top" HorizontalAlignment="Center" Content="CONTINUE"  Style="{StaticResource ButtonStyle}" Click="Retour"/>
         <Button  Grid.Column="1" Grid.Row="1" Height="80" Width="280"  Margin="0 30 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Menu"  Style="{StaticResource ButtonStyle}" Click="Menu" />
-        <Slider Style="{StaticResource CustomSlider_V2}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Margin="0 0 0 50" VerticalAlignment="Bottom" Width="280" Height="30" Minimum="0" Maximum="1" Value="{Binding BackgroundVolume, Mode=TwoWay}" SmallChange="1"/>
+        <Slider Name="sliderVolume" Style="{StaticResource CustomSlider_V2}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Margin="0 0 0 50" VerticalAlignment="Bottom" Width="280" Height="30" Minimum="0" Maximum="1"  SmallChange="1" ValueChanged="SaveVolume"/>
     </Grid>
 </Window>
