--- a/Source/Space Invaders/Space Invaders/View/GamePageWindow.xaml
+++ b/Source/Space Invaders/Space Invaders/View/GamePageWindow.xaml
@@ -14,7 +14,7 @@
         <Label Content="Score:" Style="{StaticResource Bungee}"  Height="50" Width="100" HorizontalAlignment="Center"  VerticalAlignment="Top" Foreground="White" HorizontalContentAlignment="Left" FontSize="24px" Margin="-70,0,0,0" />
         <Label Name="ScoreL" Content="0" Style="{StaticResource Bungee}"  Height="50" Width="75" HorizontalAlignment="Center"  VerticalAlignment="Top" Foreground="White" HorizontalContentAlignment="Left" FontSize="24px" Margin="95,0,0,0" />
 
-        <Label Content="Lifes" Style="{StaticResource Bungee}"  Height="50" Width="75" HorizontalAlignment="Left"  VerticalAlignment="Top" Foreground="Red" HorizontalContentAlignment="Left" FontSize="24px"  />
+        <Label Content="Lifes" Style="{StaticResource Bungee}"  Height="50" Width="87" HorizontalAlignment="Left"  VerticalAlignment="Top" VerticalContentAlignment="Top" Foreground="Red" HorizontalContentAlignment="Left" FontSize="24px"  />
         <Canvas x:Name="Canvas" Margin="0,0,0,0">
             <Button  Background="Transparent" Height="30" Width="80" BorderThickness="2" BorderBrush="white" Focusable="False" Canvas.Right="0" VerticalAlignment="Top" Margin="10, 0, 10,0" Click="PauseSetting" >
                 <DockPanel>
