--- a/Source/Space Invaders/Space Invaders/View/GameLooseWindow.xaml
+++ b/Source/Space Invaders/Space Invaders/View/GameLooseWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:res="clr-namespace:Space_Invaders.Res"
         xmlns:local="clr-namespace:Space_Invaders.View"
         mc:Ignorable="d"
         Title="GameLooseWindow" Height="550" Width="750">
@@ -24,7 +25,7 @@
         <Image HorizontalAlignment="Left" Height="90" VerticalAlignment="Top" Width="132" Source="/Sprites/Decor/alienv.png" Grid.Column="1" Grid.Row="1"/>
         <Image HorizontalAlignment="Center"  Height="90" VerticalAlignment="Top" Width="132" Source="/Sprites/Decor/alienr.png" Grid.Column="1" Grid.Row="1"/>
         <Image HorizontalAlignment="Right" Height="90" VerticalAlignment="Top" Width="132" Source="/Sprites/Decor/alienb.png" Grid.Column="1" Grid.Row="1"/>
-        <Label Content="GAME OVER" Style="{StaticResource Bungee}" Grid.Column="1" Height="98" Width="412" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Foreground="#FEFE5A" HorizontalContentAlignment="Center" FontSize="50px" Grid.RowSpan="2" Margin="0,65,0,0"/>
+        <Label Content="{x:Static res:strings.GAMEOVER}" Style="{StaticResource Bungee}" Grid.Column="1" Height="98" Width="412" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Foreground="#FEFE5A" HorizontalContentAlignment="Center" FontSize="50px" Grid.RowSpan="2" Margin="0,65,0,0"/>
         <Label x:Name="scoreLabel" Content="Score : " Style="{StaticResource Bungee}" Grid.Column="1" Height="100" Width="348" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Top" Foreground="#FEFE5A" HorizontalContentAlignment="Center" VerticalContentAlignment="Top" FontSize="32px" BorderThickness="3" BorderBrush="#FEFE5A" Margin="0,75,0,0"  />
         <Button Grid.Column="2" Grid.Row="3" Height="50" Width="130"  VerticalAlignment="Top" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="MENU" FontSize="24" Style="{StaticResource ButtonStyle}" Click="Menu"/>
 
