--- a/Source/Space Invaders/Space Invaders/View/PauseGameWindow.xaml
+++ b/Source/Space Invaders/Space Invaders/View/PauseGameWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:res="clr-namespace:Space_Invaders.Res"
         xmlns:local="clr-namespace:Space_Invaders.View"
         mc:Ignorable="d"
         Title="PauseGameWindow" Height="550" Width="650">
@@ -22,7 +23,7 @@
             <ImageBrush ImageSource="/Sprites/Background/background.png"/>
         </Grid.Background>
         <Border BorderThickness="5" BorderBrush="Yellow" CornerRadius="25" Grid.Row="1" Grid.Column="1"/>
-        <Button Grid.Column="1" Grid.Row="1" Height="80" Width="280"  Margin="0 40 0 0" VerticalAlignment="Top" HorizontalAlignment="Center" Content="CONTINUE"  Style="{StaticResource ButtonStyle}" Click="Retour"/>
+        <Button Grid.Column="1" Grid.Row="1" Height="80" Width="280"  Margin="0 40 0 0" VerticalAlignment="Top" HorizontalAlignment="Center" Content="{x:Static res:strings.CONTNUE}"  Style="{StaticResource ButtonStyle}" Click="Retour"/>
         <Button  Grid.Column="1" Grid.Row="1" Height="80" Width="280"  Margin="0 30 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Menu"  Style="{StaticResource ButtonStyle}" Click="Menu" />
         <Slider Name="sliderVolume" Style="{StaticResource CustomSlider_V2}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Margin="0 0 0 50" VerticalAlignment="Bottom" Width="280" Height="30" Minimum="0" Maximum="1"  SmallChange="1" ValueChanged="SaveVolume"/>
     </Grid>
