--- a/Source/Space Invaders/Space Invaders/View/Tutorial.xaml
+++ b/Source/Space Invaders/Space Invaders/View/Tutorial.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:res="clr-namespace:Space_Invaders.Res"
         xmlns:local="clr-namespace:Space_Invaders.View"
         mc:Ignorable="d"
         Title="Tutorial" Height="600" Width="800">
@@ -24,10 +25,10 @@
         <Image HorizontalAlignment="Left" Height="90" VerticalAlignment="Top" Width="132" Source="/Sprites/Decor/alienv.png" Grid.Column="1" Grid.Row="1"/>
         <Image HorizontalAlignment="Center"  Height="90" VerticalAlignment="Top" Width="132" Source="/Sprites/Decor/alienr.png" Grid.Column="1" Grid.Row="1"/>
         <Image HorizontalAlignment="Right" Height="90" VerticalAlignment="Top" Width="132" Source="/Sprites/Decor/alienb.png" Grid.Column="1" Grid.Row="1"/>
-        <Label Content="Espace pour tirer" Style="{StaticResource Bungee}" Grid.Column="1" Height="63" Width="412" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Top" Foreground="#eee" HorizontalContentAlignment="Center" FontSize="20px" Margin="0,65,0,0"/>
+        <Label Content="{x:Static res:strings.SPACEBAR}" Style="{StaticResource Bungee}" Grid.Column="1" Height="63" Width="412" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Top" Foreground="#eee" HorizontalContentAlignment="Center" FontSize="20px" Margin="0,65,0,0"/>
 
-        <Label Content="Tutoriel" Style="{StaticResource Bungee}" Grid.Column="1" Height="98" Width="412" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Foreground="#FEFE5A" HorizontalContentAlignment="Center" FontSize="50px" Grid.RowSpan="2" Margin="0,65,0,0"/>
-        <Label Content="Les boutons droit et gauche pour se deplacer" Style="{StaticResource Bungee}" Height="63" Grid.Row="3" VerticalAlignment="Center" Foreground="#eee" HorizontalContentAlignment="Center" FontSize="18px" Margin="31,0,106,0" Grid.ColumnSpan="2"/>
+        <Label Content="{x:Static res:strings.TUTORIAL}" Style="{StaticResource Bungee}" Grid.Column="1" Height="98" Width="412" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Foreground="#FEFE5A" HorizontalContentAlignment="Center" FontSize="50px" Grid.RowSpan="2" Margin="0,65,0,0"/>
+        <Label Content="{x:Static res:strings.GAMEPAD}" Style="{StaticResource Bungee}" Height="63" Grid.Row="3" VerticalAlignment="Center" Foreground="#eee" HorizontalContentAlignment="Center" FontSize="18px" Margin="10,0,71,0" Grid.ColumnSpan="2"/>
         <Image Grid.Column="1" HorizontalAlignment="Center" Height="61" Margin="0,133,0,0" Grid.Row="2" Source="/Sprites/spacebar.png" VerticalAlignment="Top" Width="238"/>
         <Image Grid.Column="1" HorizontalAlignment="Left" Height="90" Margin="414,10,0,0" Grid.Row="3" Source="/Sprites/fleches.png" VerticalAlignment="Top" Width="174" Grid.ColumnSpan="2"/>
     </Grid>
