--- a/Source/Space Invaders/Space Invaders/View/GameWinWindow.xaml
+++ b/Source/Space Invaders/Space Invaders/View/GameWinWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:Space_Invaders.View"
         mc:Ignorable="d" 
         
-        Title="GameWin" Height="550" Width="750">
+        Title="{x:Static res:strings.WINWINDOW}" Height="550" Width="750">
 
     <Grid>
         <Grid.RowDefinitions>
