--- a/Source/Space Invaders/Space Invaders/MainWindow.xaml
+++ b/Source/Space Invaders/Space Invaders/MainWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"     
         xmlns:gif="https://github.com/XamlAnimatedGif/XamlAnimatedGif" 
      
-      Title="MenuPage" Height="750" Width="1200">
+      Title="SpaceInvaders" Height="750" Width="1200">
 
     <Grid>
         <Grid.RowDefinitions>
